<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bright_04"
    android:orientation="vertical"
    tools:context="com.example.android.project_podcastplayer.DiscoverPodcasts">

    <LinearLayout style="@style/card_superclass.card_activity_overview">

        <TextView
            style="@style/activity_heading"
            android:text="@string/discover_podcasts_heading" />

        <TextView
            style="@style/activity_description"
            android:text="@string/discover_podcasts_description" />

    </LinearLayout>

    <LinearLayout style="@style/card_superclass.card_linked_activities">

        <TextView
            style="@style/links_heading"
            android:text="@string/all_activities_linked_activities_heading" />

        <Button
            android:id="@+id/button_discoverpodcasts_to_home"
            style="@style/links_button"
            android:text="@string/link_text_home" />

        <Button
            android:id="@+id/button_discoverpodcasts_to_podcast_details"
            style="@style/links_button"
            android:text="@string/link_text_podcast_details" />

        <Button
            android:id="@+id/button_discoverpodcasts_to_full_player"
            style="@style/links_button"
            android:text="@string/link_text_full_player" />

    </LinearLayout>

</LinearLayout>
